infra/k8s/ingress-router.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-router
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/?(.*)
            backend:
              serviceName: server-service
              servicePort: server-port
          - path: /?(.*)
            backend:
              serviceName: client-service
              servicePort: client-port
